Bug 258044 - battery applet popup - text still does not fit into window
Summary: battery applet popup - text still does not fit into window
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-battery (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-27 09:15 UTC by Andrey Borzenkov
Modified: 2011-01-23 09:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bettery applet window with content that does not fit (49.85 KB, image/png)
2010-11-27 09:15 UTC, Andrey Borzenkov
Details
Battery applet with half dragged away content/ (355.97 KB, image/png)
2010-11-27 09:16 UTC, Andrey Borzenkov
Details
Empty battery applet window with content "stuck" somewhere (254.71 KB, image/png)
2010-11-27 09:17 UTC, Andrey Borzenkov
Details
Battery popup with text that does not fit in 4.5.95 (44.03 KB, image/png)
2011-01-23 09:58 UTC, Andrey Borzenkov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Borzenkov 2010-11-27 09:15:03 UTC
Created attachment 53783 [details]
Bettery applet window with content that does not fit

Version:           unspecified (using KDE 4.5.80) 
OS:                Linux

KDE 4.5.80/Qt 4.7.1, locale Ru_RU.UTF-8

Battery applet is still not quite usable

1. In Russian (and likely some others non-English) locale content does not fit, making it impossible to see and press settings button. See screenshot.

2. When I drag window content with mouse it will scroll away; when released mouse button it will "rubber back". Amusing but mat be not what intended? See screenshot

3. If I press any key while window content is dragged off border, window remains blank when I open it next time. See screenshot.

The first problem is really very old and exhibits itself differently in different releases but has never been really fixed.

Reproducible: Always
Comment 1 Andrey Borzenkov 2010-11-27 09:16:22 UTC
Created attachment 53784 [details]
Battery applet with half dragged away content/
Comment 2 Andrey Borzenkov 2010-11-27 09:17:17 UTC
Created attachment 53785 [details]
Empty battery applet window with content "stuck" somewhere
Comment 3 Sebastian Kügler 2010-12-23 15:17:27 UTC
The dragging of the window content should be fixed, that seems a hickup in the extenders.

I understood Aurelien had fixed the length of the buttons, so they elide rather than overflow. I'll poke him.
Comment 4 Aurelien Gateau 2010-12-24 14:46:58 UTC
SVN commit 1209082 by gateau:

Make sure the widget gets wide enough to fit wide texts.

BUG: 258044

 M  +10 -1     battery.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1209082
Comment 5 Aurelien Gateau 2011-01-05 23:04:53 UTC
SVN commit 1212140 by gateau:

Turn the extender into a regular popup applet

Prevents weird drag'n'drop behavior

CCBUG: 258044

 M  +12 -14    battery.cpp  
 M  +1 -1      battery.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212140
Comment 6 Sebastian Kügler 2011-01-05 23:29:52 UTC
SVN commit 1212149 by sebas:

Make sure the widget gets wide enough to fit wide texts


backported from trunk, patch by Aurélien Gâteau

CCMAIL:agateau@kde.org
BUG: 258044



 M  +10 -1     battery.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212149
Comment 7 Andrey Borzenkov 2011-01-23 09:58:00 UTC
Created attachment 56342 [details]
Battery popup with text that does not fit in 4.5.95

(In reply to comment #6)
> SVN commit 1212149 by sebas:
> 
> Make sure the widget gets wide enough to fit wide texts
> 

Is it supposed to be in 4.5.95? Because it is not fixed there.