Make sure the widget gets wide enough to fit wide texts

backported from trunk, patch by Aurélien Gâteau

CCMAIL:agateau@kde.org
BUG: 258044


svn path=/branches/KDE/4.6/kdebase/workspace/; revision=1212149